Updated readme Updated UI

--- a/ArgentosTest/ArgentosTest/Base.lproj/Main.storyboard
+++ b/ArgentosTest/ArgentosTest/Base.lproj/Main.storyboard
@@ -35,8 +35,8 @@
                                     <segue destination="AYA-Jd-Blf" kind="show" identifier="toTransfers" id="PZy-YG-ewc"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3.76 ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rxc-ID-efM">
-                                <rect key="frame" x="171.5" y="226" width="71" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rxc-ID-efM">
+                                <rect key="frame" x="169.5" y="226" width="75" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
